website's letest version

--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStructure.html
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStructure.html
@@ -18,8 +18,31 @@
             referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="./LandingPageStyle.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/swiper/swiper-bundle.min.css"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Beiruti:wght@200..900&family=Cairo:wght@200..1000&family=Changa:wght@200..800&family=El+Messiri:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Freeman&family=Readex+Pro:wght@160..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Tajawal:wght@200;300;400;500;700;800;900&family=Zain:wght@200;300;400;700;800;900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Beiruti:wght@200..900&family=Cairo:wght@200..1000&family=Changa:wght@200..800&family=Donegal+One&family=El+Messiri:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Freeman&family=Goblin+One&family=Metal+Mania&family=Readex+Pro:wght@160..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Suez+One&family=Tajawal:wght@200;300;400;500;700;800;900&family=Zain:wght@200;300;400;700;800;900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
+        <div class="loading_screen" id="loading">
+            <div class="loading">
+                <div class="red_sign"></div>
+                <div class="yellow_sign"></div>
+                <div class="green_sign"></div>
+            </div>
+        </div>
         <div class="header">
             <div id="logo">
                 <img
@@ -147,11 +170,12 @@
                     automatically .
                 </p>
                 <button type="submit">
-                    Get Started<i class="fa-solid fa-arrow-right"></i>
+                    Get Started
+                    <i class="fa-solid fa-arrow-right"></i>
                 </button>
             </div>
             <div class="title_image">
-                <img src="../../assets/images/21807.jpg" alt="" srcset="" />
+                <img src="../../assets/images/15535.jpg" alt="" srcset="" />
             </div>
         </div>
         <button id="back_to_top" class="to_top">
@@ -204,7 +228,106 @@
             <h1>Members</h1>
             <div id="members_container"></div>
         </div>
+        <div class="members_Slider">
+            <div class="member1">
+                <i class="fa-solid fa-code"></i>
+                <h1>Moatasem Nagy</h1>
+                <h2>WEB DEVELOPMENT</h2>
+                <p>
+                    A web developer responsible for designing and developing the
+                    Traffic Viewer platform. Specializes in building intuitive
+                    user interfaces and ensuring seamless interaction between
+                    the website and hardware systems .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member2">
+                <i class="fa-solid fa-code"></i>
+                <h1>Mostafa Elbadry</h1>
+                <h2>WEB DEVELOPMENT</h2>
+                <p>
+                    A web developer working on the backend infrastructure of
+                    Traffic Viewer. Focused on integrating hardware APIs and
+                    ensuring secure and efficient communication between the
+                    platform and IoT devices .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member3">
+                <i class="fa-solid fa-microchip"></i>
+                <h1>Mahmoud Walid</h1>
+                <h2>Embeded system</h2>
+                <p>
+                    developer working on the backend infrastructure of Traffic
+                    Viewer. Focused on integrating hardware APIs and ensuring
+                    secure and efficient communication between the platform and
+                    IoT devices .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member4">
+                <i class="fa-solid fa-microchip"></i>
+                <h1>Yousif Mostafa</h1>
+                <h2>Embeded System</h2>
+                <p>
+                    Hardware and firmware specialist responsible for optimizing
+                    the embedded systems in Traffic Viewer. Develops robust
+                    solutions for real-time traffic monitoring and control using
+                    Arduino and ESP .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member5">
+                <i class="fa-solid fa-microchip"></i>
+                <h1>Ebrahim Yasser</h1>
+                <h2>Embeded System</h2>
+                <p>
+                    Embedded systems engineer focused on testing and
+                    troubleshooting hardware modules in Traffic Viewer. Works on
+                    enhancing device performance and ensuring system stability
+                    in live environments .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member6">
+                <i class="fa-solid fa-microchip"></i>
+                <h1>Yousif Moawad</h1>
+                <h2>Embeded System</h2>
+                <p>
+                    IoT and embedded systems expert involved in integrating
+                    sensors and communication modules for Traffic Viewer.
+                    Designs efficient protocols for remote traffic management
+                    and real-time updates .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member7">
+                <i class="fa-solid fa-microchip"></i>
+                <h1>Rodania Moeen</h1>
+                <h2>Embeded System</h2>
+                <p>
+                    Engineer specializing in firmware development for Traffic
+                    Viewer. Develops advanced features to improve traffic flow
+                    management and supports the seamless operation of the
+                    Arduino and ESP systems .
+                </p>
+                <button>About Me</button>
+            </div>
+            <div class="member8">
+                <i class="fa-solid fa-microchip"></i>
+                <h1>Sara Zaki</h1>
+                <h2>Embeded System</h2>
+                <p>
+                    An embedded systems engineer ensuring the hardware-software
+                    integration of Traffic Viewer. Focused on delivering
+                    reliable solutions for remote traffic control and system
+                    scalability .
+                </p>
+                <button>About Me</button>
+            </div>
+        </div>
         <!-- End Members Section -->
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <script src="./LandingPageDynamic.js"></script>
     </body>
 </html>
