--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/index.html
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/index.html
@@ -311,7 +311,7 @@
         </div>
       </div>
     </div>
-    <div class="nav_btns">
+    <div id="nav_bars">
       <button id="prev" class="member_btn">&lt;</button>
       <button id="next" class="member_btn">&gt;</button>
     </div>
