--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/index.html
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/index.html
@@ -311,11 +311,42 @@
         </div>
       </div>
     </div>
-    <div id="nav_bars">
-      <button id="prev" class="member_btn">&lt;</button>
-      <button id="next" class="member_btn">&gt;</button>
+    <div id="nav_btns">
+      <button id="prev" class="member_btn">
+        <i class="fa-solid fa-angle-left"></i>
+      </button>
+      <button id="next" class="member_btn">
+        <i class="fa-solid fa-angle-right"></i>
+      </button>
     </div>
     <!-- End Members Section -->
+    <!-- Start Footer Section -->
+    <div class="footer">
+      <div class="footer_content">
+        <div class="ratingList">
+          <label for="choices"><button>Submit</button></label>
+          <select class="custom-select2">
+            <option value="" disabled selected>Choose Rating</option>
+            <option value="1">⭐</option>
+            <option value="2">⭐⭐</option>
+            <option value="3">⭐⭐⭐</option>
+            <option value="4">⭐⭐⭐⭐</option>
+            <option value="5">⭐⭐⭐⭐⭐</option>
+          </select>
+        </div>
+        <div class="copyRight">
+          <p>
+            <i class="fa-regular fa-copyright"></i>All Rights Reserved To
+            <span>Traffic Viewer</span>
+          </p>
+        </div>
+        <div class="ratingAverage">
+          <h3>Rating</h3>
+          <h1>4.5</h1>
+        </div>
+      </div>
+    </div>
+    <!-- End Footer Section -->
     <script src="./LandingPageDynamic.js"></script>
   </body>
 </html>
