--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="shortcut icon"
       type="x-icon"
       sizes="16x16 32x32 64x64"
-      href="../../assets/images/icon_browser_image-removebg-preview.png"
+      href="./assets/images/icon_browser_image-removebg-preview.png"
     />
     <link
       rel="stylesheet"
@@ -46,7 +46,7 @@
     <div class="header">
       <div id="logo">
         <img
-          src="../../assets/images/Traffic_Viewer-removebg-preview.png"
+          src="./assets/images/Traffic_Viewer-removebg-preview.png"
           alt="LOGO"
           srcset=""
         />
@@ -169,7 +169,7 @@
         </button>
       </div>
       <div class="title_image">
-        <img src="../../assets/images/15535.jpg" alt="" srcset="" />
+        <img src="./assets/images/15535.jpg" alt="" srcset="" />
       </div>
     </div>
     <button id="back_to_top" class="to_top">
@@ -186,7 +186,7 @@
         real-time.
       </div>
       <div id="card_one" class="about_card">
-        <img src="../../assets/images/web_check.png" alt="" />
+        <img src="./assets/images/web_check.png" alt="" />
         <p>
           You can access traffic status anytime and anywhere, using any device.
           With responsive design and cross-platform compatibility, Traffic
@@ -201,10 +201,10 @@
           pass. The system will temporarily halt other traffic to ensure a
           smooth and efficient passage for emergency responders.
         </p>
-        <img src="../../assets/images/police_amb_people.png" alt="" />
+        <img src="./assets/images/police_amb_people.png" alt="" />
       </div>
       <div id="card_three" class="about_card">
-        <img src="../../assets/images/police_amb.png" alt="" />
+        <img src="./assets/images/police_amb.png" alt="" />
         <p>
           It helps reduce traffic accidents by making roads safer through easier
           and more efficient traffic control. By ensuring smooth traffic flow
