--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           An Automatic Traffic System uses sensors and data to optimize<br />traffic
           flow and improve road safety automatically .
         </p>
-        <button type="submit">
+        <button type="submit" id="getStarted">
           Get Started
           <i class="fa-solid fa-arrow-right"></i>
         </button>
