compress files with offline resources

--- a/index.html
+++ b/index.html
@@ -8,32 +8,11 @@
       rel="shortcut icon"
       type="x-icon"
       sizes="16x16 32x32 64x64"
-      href="./assets/images/icon_browser_image-removebg-preview.png"
+      href="/assets/images/favicon.webp"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./LandingPageStyle.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Beiruti:wght@200..900&family=Cairo:wght@200..1000&family=Changa:wght@200..800&family=El+Messiri:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Freeman&family=Readex+Pro:wght@160..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Tajawal:wght@200;300;400;500;700;800;900&family=Zain:wght@200;300;400;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Beiruti:wght@200..900&family=Cairo:wght@200..1000&family=Changa:wght@200..800&family=Donegal+One&family=El+Messiri:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Freeman&family=Goblin+One&family=Metal+Mania&family=Readex+Pro:wght@160..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Suez+One&family=Tajawal:wght@200;300;400;500;700;800;900&family=Zain:wght@200;300;400;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/online/fa.css" />
+    <link rel="stylesheet" href="/LandingPageStyle.css" />
+    <link href="/online/fonts.css" rel="stylesheet" />
   </head>
   <body>
     <div class="loading_screen" id="loading">
@@ -46,7 +25,7 @@
     <div class="header">
       <div id="logo">
         <img
-          src="./assets/images/Traffic_Viewer-removebg-preview.png"
+          src="/assets/images/Traffic_Viewer_logo.webp"
           alt="LOGO"
           srcset=""
         />
@@ -161,7 +140,7 @@
         <h1>Automatic Traffic<br />Control</h1>
         <p>
           An Automatic Traffic System uses sensors and data to optimize<br />traffic
-          flow and improve road safety automatically .
+          flow and improve road safety automatically.
         </p>
         <button type="submit" id="getStarted">
           Get Started
@@ -169,7 +148,7 @@
         </button>
       </div>
       <div class="title_image">
-        <img src="./assets/images/15535.jpg" alt="" srcset="" />
+        <img src="/assets/images/home_img2.webp" alt="" srcset="" />
       </div>
     </div>
     <button id="back_to_top" class="to_top">
@@ -186,7 +165,7 @@
         real-time.
       </div>
       <div id="card_one" class="about_card">
-        <img src="./assets/images/web_check.png" alt="" />
+        <img src="/assets/images/web_check2.webp" alt="" />
         <p>
           You can access traffic status anytime and anywhere, using any device.
           With responsive design and cross-platform compatibility, Traffic
@@ -201,10 +180,10 @@
           pass. The system will temporarily halt other traffic to ensure a
           smooth and efficient passage for emergency responders.
         </p>
-        <img src="./assets/images/police_amb_people.png" alt="" />
+        <img src="/assets/images/police_amb_people2.webp" alt="" />
       </div>
       <div id="card_three" class="about_card">
-        <img src="./assets/images/police_amb.png" alt="" />
+        <img src="/assets/images/police_amb2.webp" alt="" />
         <p>
           It helps reduce traffic accidents by making roads safer through easier
           and more efficient traffic control. By ensuring smooth traffic flow
@@ -225,89 +204,80 @@
           <h1>Moatasem Nagy</h1>
           <h2>WEB DEVELOPMENT</h2>
           <p>
-            A web developer responsible for designing and developing the Traffic
-            Viewer platform. Specializes in building intuitive user interfaces
-            and ensuring seamless interaction between the website and hardware
-            systems .
+            Designs and develops the Traffic Viewer platform, focusing on
+            user-friendly interfaces and hardware integration
           </p>
-          <button>About Me</button>
+          <button id="member1">About Me</button>
         </div>
         <div class="member2 card">
           <i class="fa-solid fa-code"></i>
           <h1>Mostafa Elbadry</h1>
           <h2>WEB DEVELOPMENT</h2>
           <p>
-            A web developer working on the backend infrastructure of Traffic
-            Viewer. Focused on integrating hardware APIs and ensuring secure and
-            efficient communication between the platform and IoT devices .
+            Builds backend systems for Traffic Viewer, ensuring secure
+            communication between the platform and IoT devices
           </p>
-          <button>About Me</button>
+          <button id="member2">About Me</button>
         </div>
         <div class="member3 card">
           <i class="fa-solid fa-microchip"></i>
           <h1>Mahmoud Walid</h1>
           <h2>Embeded system</h2>
           <p>
-            developer working on the backend infrastructure of Traffic Viewer.
-            Focused on integrating hardware APIs and ensuring secure and
-            efficient communication between the platform and IoT devices .
+            Programs and configures ESP and Arduino for Traffic Viewer, ensuring
+            reliable device synchronization
           </p>
-          <button>About Me</button>
+          <button id="member3">About Me</button>
         </div>
         <div class="member4 card">
           <i class="fa-solid fa-microchip"></i>
-          <h1>Yousif Mostafa</h1>
+          <h1>Yousef Mostafa</h1>
           <h2>Embeded System</h2>
           <p>
-            Hardware and firmware specialist responsible for optimizing the
-            embedded systems in Traffic Viewer. Develops robust solutions for
-            real-time traffic monitoring and control using Arduino and ESP .
+            Optimizes hardware and firmware for real-time traffic monitoring and
+            control using Arduino and ESP
           </p>
-          <button>About Me</button>
+          <button id="member4">About Me</button>
         </div>
         <div class="member5 card">
           <i class="fa-solid fa-microchip"></i>
-          <h1>Ebrahim Yasser</h1>
+          <h1>Ibrahim Yasser</h1>
           <h2>Embeded System</h2>
           <p>
-            Embedded systems engineer focused on testing and troubleshooting
-            hardware modules in Traffic Viewer. Works on enhancing device
-            performance and ensuring system stability in live environments .
+            Tests and troubleshoots hardware modules to ensure system stability
+            and performance
           </p>
-          <button>About Me</button>
+          <button id="member5">About Me</button>
         </div>
         <div class="member6 card">
           <i class="fa-solid fa-microchip"></i>
-          <h1>Yousif Moawad</h1>
+          <h1>Yousef Moawad</h1>
           <h2>Embeded System</h2>
           <p>
-            IoT and embedded systems expert involved in integrating sensors and
-            communication modules for Traffic Viewer. Designs efficient
-            protocols for remote traffic management and real-time updates .
+            Integrates sensors and communication modules for real-time traffic
+            updates and management
           </p>
-          <button>About Me</button>
+          <button id="member6">About Me</button>
         </div>
         <div class="member7 card">
           <i class="fa-solid fa-microchip"></i>
           <h1>Rodania Moeen</h1>
           <h2>Embeded System</h2>
           <p>
-            Engineer specializing in firmware development for Traffic Viewer.
-            Develops advanced features to improve traffic flow management and
-            supports the seamless operation of the Arduino and ESP systems .
+            Develops firmware to enhance traffic flow management and ensure
+            system reliability
           </p>
-          <button>About Me</button>
+          <button id="member7">About Me</button>
         </div>
         <div class="member8 card">
           <i class="fa-solid fa-microchip"></i>
           <h1>Sara Zaki</h1>
           <h2>Embeded System</h2>
           <p>
-            An embedded systems engineer ensuring the hardware-software
-            integration of Traffic Viewer. Focused on delivering reliable
-            solutions for remote traffic control and system scalability .
+            Manages hardware-software integration for scalable and reliable
+            remote traffic control solutions
           </p>
-          <button>About Me</button>
+          <button id="member8">About Me</button>
         </div>
       </div>
     </div>
@@ -342,11 +312,11 @@
         </div>
         <div class="ratingAverage">
           <h3>Rating</h3>
-          <h1>4.5</h1>
+          <h1>0.0</h1>
         </div>
       </div>
     </div>
     <!-- End Footer Section -->
-    <script src="./LandingPageDynamic.js"></script>
+    <script src="/LandingPageDynamic.js"></script>
   </body>
 </html>
