--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       rel="shortcut icon"
       type="x-icon"
       sizes="16x16 32x32 64x64"
-      href="/assets/images/favicon.webp"
+      href="./assets/images/favicon.webp"
     />
-    <link rel="stylesheet" href="/online/fa.css" />
-    <link rel="stylesheet" href="/LandingPageStyle.css" />
-    <link href="/online/fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./online/fa.css" />
+    <link rel="stylesheet" href="./LandingPageStyle.css" />
+    <link href="./online/fonts.css" rel="stylesheet" />
   </head>
   <body>
     <div class="loading_screen" id="loading">
@@ -25,7 +25,7 @@
     <div class="header">
       <div id="logo">
         <img
-          src="/assets/images/Traffic_Viewer_logo.webp"
+          src="./assets/images/Traffic_Viewer_logo.webp"
           alt="LOGO"
           srcset=""
         />
@@ -148,7 +148,7 @@
         </button>
       </div>
       <div class="title_image">
-        <img src="/assets/images/home_img2.webp" alt="" srcset="" />
+        <img src="./assets/images/home_img2.webp" alt="" srcset="" />
       </div>
     </div>
     <button id="back_to_top" class="to_top">
@@ -165,7 +165,7 @@
         real-time.
       </div>
       <div id="card_one" class="about_card">
-        <img src="/assets/images/web_check2.webp" alt="" />
+        <img src="./assets/images/web_check2.webp" alt="" />
         <p>
           You can access traffic status anytime and anywhere, using any device.
           With responsive design and cross-platform compatibility, Traffic
@@ -180,10 +180,10 @@
           pass. The system will temporarily halt other traffic to ensure a
           smooth and efficient passage for emergency responders.
         </p>
-        <img src="/assets/images/police_amb_people2.webp" alt="" />
+        <img src="./assets/images/police_amb_people2.webp" alt="" />
       </div>
       <div id="card_three" class="about_card">
-        <img src="/assets/images/police_amb2.webp" alt="" />
+        <img src="./assets/images/police_amb2.webp" alt="" />
         <p>
           It helps reduce traffic accidents by making roads safer through easier
           and more efficient traffic control. By ensuring smooth traffic flow
@@ -317,6 +317,6 @@
       </div>
     </div>
     <!-- End Footer Section -->
-    <script src="/LandingPageDynamic.js"></script>
+    <script src="./LandingPageDynamic.js"></script>
   </body>
 </html>
