--- a/start/index.html
+++ b/start/index.html
@@ -8,11 +8,11 @@
       rel="shortcut icon"
       type="x-icon"
       sizes="16x16 32x32 64x64"
-      href="/assets/images/favicon.webp"
+      href="../assets/images/favicon.webp"
     />
-    <link rel="stylesheet" href="/start/styles.css" />
-    <link href="/online/fonts.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/online/fa.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link href="../online/fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../online/fa.css" />
   </head>
   <body>
     <div class="loading_screen" id="loading">
@@ -269,6 +269,6 @@
       </div>
       <input type="submit" value="Enter" id="enterBtn" />
     </form>
-    <script src="/start/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
