--- a/live/index.html
+++ b/live/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Traffic Monitoring System</title>
-    <link rel="stylesheet" href="/live/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="shortcut icon"
       type="x-icon"
